replace joblib with dill in environment.yml

--- a/scripts/environment.yml
+++ b/scripts/environment.yml
@@ -9,7 +9,7 @@ dependencies:
       - pandas
       - requests
       - scikit-learn
-      - joblib
+      - dill
       - requests-html
       - yahoo-fin
       - google-cloud-storage
