func env script and clean up imports

--- a/scripts/environment.yml
+++ b/scripts/environment.yml
@@ -9,6 +9,7 @@ dependencies:
       - pandas
       - requests
       - scikit-learn
+      - xgboost
       - dill
       - requests-html
       - yahoo-fin
